def